--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,13 @@ on:
   issues:
     types: [opened]
 
-env:
-  USER: ${{ env.MY_VARIABLE }}
 jobs:
   action_job:
     runs-on: ubuntu-latest
     steps:
+      - name: if user
+        env:
+          USER: ${{ env.MY_VARIABLE }}
       - if: ${{ env.MY_VARIABLE == '' }}
         run: |
           echo "Text: '$env_var'
