--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: if user
+      - name: user get issue
         env:
-          USER: ${{ env.MY_VARIABLE }}
+          USER: ${{ github.event.issue.body }}
         run: |
           echo "Text: $USER"
-          echo "${{ github.event.issue.body }}"
+      - name: make the script executable and run
+        run: chmod +x ./scripts/script.sh && ./scripts/script.sh ${{ env.USER }}
