--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,7 @@ jobs:
           USER: ${{ github.event.issue.body }}
         run: |
           echo "Text: $USER"
-      - name: make the script executable and run
-        run: chmod +x ./scripts/script.sh && ./scripts/script.sh ${{ env.USER }}
+      - name: make the script executable
+        run: chmod +x ./scripts/script.sh
+      - name: run script
+        run : ./scripts/script.sh $USER
