--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,20 @@ jobs:
       - name: run script
         env:
           USER: ${{ github.event.issue.body }}
-        run : ./scripts/script_user_verification.sh $USER
+        run: |
+          SCRIPT_RESULT=$(./scripts/script_user_verification.sh $USER)
+          
+          if [ $SCRIPT_RESULT != $USER ]; then
+            echo $SCRIPT_RESULT
+            exit 1
+          fi
+          
+          if [ $SCRIPT_RESULT == $USER ]; then
+            echo "USER_NAME=$SCRIPT_RESULT" >> $GITHUB_ENV
+            exit 1
+          fi
+
+      - name: Run Ansible playbook
+        if: ${{ env.USER_NAME != '' }}
+        run: |
+          "echo run Future Ansuble play"
