--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,9 @@ jobs:
              echo "run Ansible GOOD!!" 
           else
              echo $SCRIPT_RESULT
+             echo $USER
+             echo "${{ steps.check_script.SCRIPT_RESULT }}"
+             echo "${{ steps.check_script.run.SCRIPT_RESULT }}"
+             echo "${{ steps.check_script.outputs.SCRIPT_RESULT }}"
           fi
         
