--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
           if [[ $SCRIPT_RESULT == $USER ]]; then
              echo "run Ansible GOOD!!" 
           else
-             echo $SCRIPT_RESULT
-             echo $USER
+             echo "$SCRIPT_RESULT"
+             echo "$USER"
              echo "${{ steps.check_script.SCRIPT_RESULT }}"
              echo "${{ steps.check_script.run.SCRIPT_RESULT }}"
-             echo "${{ steps.check_script.outputs.SCRIPT_RESULT }}"
+             echo "${{ steps.check_script.env.USER }}"
           fi
         
