--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: make the script executable
         run: chmod +x ./scripts/script_user_verification.sh
-      - name: check script
-        id: check_script
+      - name: Check script And run Ansible 
         env:
           USER: ${{ github.event.issue.body }}
         run: |
